# pgadmin3-lts

./: .gitignore  LICENSE  README.md  bootstrap  configure.ac.in  pgadmin3.desktop  release.py
.github/workflows/: check-style.yml  msbuild.yml  ubuntubuild.yml
.github/workflows-helpers/: 01-ubuntu-22.04-sphinx-packaging.patch  01-ubuntu-24.04-sphinx-packaging.patch
branding/: branding.ini
debian/: .gitignore  changelog  control  copyright  pgadmin3-lts-data.install  pgadmin3-lts-doc.copyright  pgadmin3-lts-doc.install  pgadmin3-lts.copyright  pgadmin3-lts.install  pgadmin3-lts.manpages  pgadmin3.1  rules
pgadmin/agent/: dlgStep.cpp
pgadmin/ctl/: ctlDefaultSecurityPanel.cpp  ctlSeclabelPanel.cpp  ctlSecurityPanel.cpp
pgadmin/dlg/: dlgMainConfig.cpp
pgadmin/frm/: frmQuery.cpp  frmStatus.cpp
pgadmin/include/: pgAdmin3.h  version.h
pgadmin/ogl/: oglmisc.cpp
pgadmin/schema/: pgFunction.cpp  pgObject.cpp  pgTable.cpp
pgadmin/ui/: ddPrecisionScaleDialog.xrc  ddTableNameDialog.xrc  dlgAddFavourite.xrc  dlgAggregate.xrc  dlgCast.xrc  dlgCheck.xrc  dlgCollation.xrc  dlgColumn.xrc  dlgConnect.xrc  dlgConversion.xrc  dlgDatabase.xrc  dlgDirectDbg.xrc  dlgDomain.xrc  dlgEditGridOptions.xrc  dlgEventTrigger.xrc  dlgExtTable.xrc  dlgExtension.xrc  dlgFindReplace.xrc  dlgForeignDataWrapper.xrc  dlgForeignKey.xrc  dlgForeignServer.xrc  dlgForeignTable.xrc  dlgFunction.xrc  dlgGroup.xrc  dlgHbaConfig.xrc  dlgIndex.xrc  dlgIndexConstraint.xrc  dlgJob.xrc  dlgLanguage.xrc  dlgMainConfig.xrc  dlgManageFavourites.xrc  dlgManageMacros.xrc  (+46 more)
pkg/: Makefile.am
(+3 files in other folders)
